[gd_scene load_steps=2 format=3 uid="uid://dndwdy5tdbq1l"]

[ext_resource type="Script" uid="uid://bief8m6ssaabc" path="res://user_interface/student/student.gd" id="1_5tjls"]

[node name="TableRow" type="HBoxContainer"]
script = ExtResource("1_5tjls")

[node name="LeName" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Billy Bob Joe Jurnior"
editable = false

[node name="LeGrade" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Grade 1"
editable = false

[node name="HBoxButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnSave" type="Button" parent="HBoxButtonContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="BtnEdit" type="Button" parent="HBoxButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="BtnDelete" type="Button" parent="HBoxButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[connection signal="pressed" from="HBoxButtonContainer/BtnSave" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="HBoxButtonContainer/BtnEdit" to="." method="_on_btn_edit_pressed"]
[connection signal="pressed" from="HBoxButtonContainer/BtnDelete" to="." method="_on_btn_delete_pressed"]
